Bug 502165 - Does not prompt for restart after downloading system update
Summary: Does not prompt for restart after downloading system update
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: KDE Linux backend (other bugs)
Version First Reported In: 6.4.80
Platform: KDE Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 506082 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-03-29 18:07 UTC by Marko Jokinen
Modified: 2025-09-18 20:57 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marko Jokinen 2025-03-29 18:07:56 UTC
There should be button or promt for restart system after updates. Especially on KDE Linux where restart is important to apply latest updates. This needs to be done in Discover's systemd sysupdate backend.

Alternative is to add Restart now or staging aka later on shutdown
Comment 1 Nate Graham 2025-08-22 19:39:14 UTC
There actually is a prompt, but it's not shown immediately after downloading the update due to a bug. If you restart the app and come back to the Updates page, you'll see it.
Comment 2 Aleix Pol 2025-08-25 19:34:46 UTC
Git commit fac92468019ac719bbe8335d43eed42f503ca534 by Aleix Pol.
Committed on 25/08/2025 at 01:31.
Pushed by ngraham into branch 'master'.

sysupdate: Fix ending of updates

We'd update the version to "" (as indicated in the comment there). When
successful, set the new installed version of the resource to the one
that was available prior to the update.

Otherwise it would end up in an odd state where it seems it hasn't
updated but it actually has.

M  +2    -2    libdiscover/backends/SystemdSysupdateBackend/SystemdSysupdateResource.cpp

https://invent.kde.org/plasma/discover/-/commit/fac92468019ac719bbe8335d43eed42f503ca534
Comment 3 Nate Graham 2025-09-18 20:57:51 UTC
*** Bug 506082 has been marked as a duplicate of this bug. ***